--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/google": "^0.0.51",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/vercel": "^7.8.1",
     "ai": "^3.4.7",
     "astro": "^4.15.10",
     "typescript": "^5.6.2",
